# jp-summarize

./: Makefile  README.md  pyproject.toml  tox.ini
.github/workflows/: python-package.yml
jp_summarize/: __main__.py  processor.py
jp_summarize/normalizer/: ja.py
src/: __main__.py  processor.py  summarizer.py
src/corpus/: ja.py
src/normalizer/: ja.py
tests/: test_main.py  test_processor.py
