[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "sumy-action"
version = "0.1.0"
description = ""
authors = ["MichinaoShimizu <shimizu.michinao@gmail.com>"]
license = ""
readme = "README.md"
repository = "https://github.com/MichinaoShimizu/sumy-action"
packages = [
    { include = "src", from = "." }
]
include = [
    "poetry.lock",
    "tox.ini",
    "tests"
]

[tool.poetry.dependencies]
python = "^3.8.12"
spacy = "^3.2.2"
ja-ginza = "^5.1.0"
ja-ginza-dict = "*"
Janome = "^0.4.1"
mojimoji = "^0.0.12"
emoji = "^0.6.0"
neologdn = "^0.5.1"
sumy = "^0.9.0"
tinysegmenter = "^0.4"

[tool.poetry.dev-dependencies]
pytest = "^7.0"
pytest-cov = "^3.0.0"
tox = "^3.24.5"
flake8 = "^4.0.1"
pre-commit = "^2.17.0"
black = "^22.1.0"

[tool.poetry.scripts]
start = "src.__main__:main"
